--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -2,5 +2,6 @@
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
-#~# move_speed_xy = 200
+#~# theme = colorized
+#~# show_heater_power = True
 #~#
