Refactoring and fixing bugs

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,7 +1,7 @@
 [server]
 host: 0.0.0.0
 port: 7125
-klippy_uds_address: /home/mary/printer_data/comms/klippy.sock
+klippy_uds_address: ~/printer_data/comms/klippy.sock
 
 [authorization]
 trusted_clients:
@@ -43,19 +43,17 @@ channel: stable
 repo: mainsail-crew/mainsail
 path: ~/mainsail
 
-[include pluggins/octoeverywhere-system.cfg]
-
 [update_manager mainsail-config]
 type: git_repo
 primary_branch: master
-path: /home/mary/mainsail-config
+path: ~/mainsail-config
 origin: git@github.com:mainsail-crew/mainsail-config.git
 managed_services: klipper
 
 
 [update_manager client kiauh]
 type: git_repo
-path: /home/mary/kiauh
+path: ~/kiauh
 origin: git@github.com:th33xitus/kiauh.git
 
 [update_manager KlipperScreen]
@@ -69,35 +67,38 @@ managed_services: KlipperScreen
 
 [update_manager crowsnest]
 type: git_repo
-path: /home/mary/crowsnest
+path: ~/crowsnest
 origin: git@github.com:mainsail-crew/crowsnest.git
 install_script: tools/install.sh
 
 [update_manager Klipper-Adaptive-Meshing-Purging]
 type: git_repo
 channel: dev
-path: /home/mary/Klipper-Adaptive-Meshing-Purging
+path: ~/Klipper-Adaptive-Meshing-Purging
 origin: git@github.com:kyleisah/Klipper-Adaptive-Meshing-Purging.git
 managed_services: klipper
 primary_branch: main
 
 [update_manager mobileraker]
 type: git_repo
-path: /home/mary/mobileraker_companion
+path: ~/mobileraker_companion
 origin: git@github.com:Clon1998/mobileraker_companion.git
 primary_branch:main
 managed_services: mobileraker
-env: /home/mary/mobileraker-env/bin/python
+env: ~/mobileraker-env/bin/python
 requirements: scripts/mobileraker-requirements.txt
 install_script: scripts/install-mobileraker-companion.sh
 
 [update_manager timelapse]
 type: git_repo
 primary_branch: main
-path: /home/mary/moonraker-timelapse
+path: ~/moonraker-timelapse
 origin: git@github.com:mainsail-crew/moonraker-timelapse.git
 managed_services: klipper moonraker
 
-[timelapse]
-enabled: True
+
+# Pluggins activation
+
 [include octoeverywhere-system.cfg]
+
+[timelapse]
