--- a/macros/start_end.cfg
+++ b/macros/start_end.cfg
@@ -13,9 +13,10 @@ gcode:
     #Get Bed and Extruder temperature from Slicer GCode
     {% set BED_TEMP = params.BED|default(60)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER|default(190)|float %}
+    {% set TOTAL_LAYER = params.TOTAL_LAYER|default(0)|int %}
 
     #Set total layer count
-    SET_PRINT_STATS_INFO TOTAL_LAYER=[TOTAL_LAYER]
+    SET_PRINT_STATS_INFO TOTAL_LAYER={TOTAL_LAYER}
 
     #Preheat nozzle and bed
     M104 S{EXTRUDER_TEMP * 0.5} # 50% of the final temp to avoid filament leak during bed leveling
@@ -52,7 +53,8 @@ gcode:
   M140 S0 # Turn-off bed
   # Move nozzle away from print while retracting
   G91
-  G1 X-2 Y-2 E-3 F300
+  # G1 X-2 Y-2 E-3 F300
+  G1 X-2 Y-2 F300
   # Raise nozzle by 10mm
   G1 Z10 F3000
   G90
