--- a/printer.cfg
+++ b/printer.cfg
@@ -1,14 +1,14 @@
 # Pluggins
 
-[include pluggins/mainsail.cfg]
+[include mainsail.cfg]
 
 [exclude_object]
 
-[include pluggins/macros_init.cfg]
+[include KAMP/*cfg]
 
-[include pluggins/KAMP/*cfg]
+[include timelapse.cfg]
 
-[include pluggins/timelapse.cfg]
+[include macros/*.cfg]
 
 # Config
 
@@ -20,8 +20,8 @@ restart_method: command
 [printer]
 kinematics: cartesian
 max_velocity: 500
-max_accel: 3500 # 4000 # 5000
-max_accel_to_decel: 3500 # 4000 # 5000
+max_accel: 2500 # 3500 # 4000 # 5000
+max_accel_to_decel: 3000 # 4000 # 5000
 square_corner_velocity: 5.0
 max_z_velocity: 5
 max_z_accel: 100
@@ -170,24 +170,6 @@ shaper_type: mzv # ei
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bed_mesh best]
-#*# version = 1
-#*# points =
-#*# 	0.190000, 0.097500, 0.025000, 0.057500, 0.032500
-#*# 	-0.002500, 0.010000, -0.012500, 0.000000, -0.010000
-#*# 	-0.015000, -0.002500, 0.005000, 0.020000, 0.005000
-#*# 	0.075000, 0.042500, 0.035000, 0.060000, 0.015000
-#*# x_count = 5
-#*# y_count = 4
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 7.0
-#*# max_x = 220.0
-#*# min_y = 7.0
-#*# max_y = 184.99
 #*#
 #*# [extruder]
 #*# control = pid
