--- a/macros/filament.cfg
+++ b/macros/filament.cfg
@@ -10,31 +10,33 @@ description: A macro executed when color change is needed
 gcode:
     #Get current layer, total of layers and filament type from Slicer GCode
     {% set BED = params.BED|default(60)|float %}
-    {% set EXCRUDER = params.EXTRUDER|default(190)|float %}
+    {% set EXTRUDER = params.EXTRUDER|default(190)|float %}
+
+    
+    {action_respond_info("COLOR_CHANGE")}
 
     SAVE_GCODE_STATE NAME=COLOR_CHANGE_state
 
     # Logging
-    LOG MSG=Color Change
-    NOTIFY MSG=Color change
+    LOG MSG="Color Change"
+    NOTIFY MSG="Color change"
     M300 ;Beep
     
-    ;Color change position
-    LOG MSG=Prepare to change color and wipe the nozzle
-    G1 X0 Y0 ; XY home
+    # Color change position
+    LOG MSG="Prepare to change color and wipe the nozzle"
+    G1 X0 Y0 # XY home
     
-    ;Waiting for the ideal temp
-    M104 S{EXTRUDER} ; set nozzle temp
-    
-    M600 ;Change filament routine
+    # Waiting for the ideal temp
+    M104 S{EXTRUDER} # set nozzle temp
 
-    RESUME
-    M300 ;Beep
+    M600 # Change filament routine
     
-    M190 S{BED} ; wait for bed temp to stabilize
-    M109 S{EXTRUDER} ; wait for nozzle temp to stabilize
+    M190 S{BED} # wait for bed temp to stabilize
+    M109 S{EXTRUDER} # wait for nozzle temp to stabilize
 
     RESTORE_GCODE_STATE NAME=COLOR_CHANGE_state
+
+    {action_respond_info("Finally finished layer change")}
 
 
 
@@ -60,6 +62,7 @@ gcode:
     {% set Z = params.Z|default(50)|float %}
     {% set RETRACT = params.RETRACT|default(0.8)|float %}
     {% set FEED = params.FEED|default(50)|float %}
+
 
     SAVE_GCODE_STATE NAME=M600_state
 
@@ -87,9 +90,10 @@ gcode:
 [gcode_macro LOAD_FILAMENT]
 
 description: Load the filament from the extruder with a given speed.
-  Usage: LOAD_FILAMENT [SPEED<mm/s>]
+  Usage: LOAD_FILAMENT [SPEED<mm/s>] [QUANTITY<mm>]
 
 gcode:
+    {% set quantity = params.QUANTITY|default(20)|int%}
     {% set speed = params.SPEED|default(300) %}
     {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
 
@@ -99,8 +103,8 @@ gcode:
     G91
 
     G92 E0
-    G1 E350 F{max_velocity} # fast-load
-    G1 E25 F{speed} # purge
+    G1 E{quantity} F{max_velocity} # fast-load
+    G1 E{quantity * 0.2} F{speed} # purge
 
     M300
 
@@ -114,9 +118,10 @@ gcode:
 [gcode_macro UNLOAD_FILAMENT]
 
 description: Unload the filament from the extruder with a given speed.
-  Usage: UNLOAD_FILAMENT [SPEED<mm/s>]
+  Usage: UNLOAD_FILAMENT [SPEED<mm/s>] [QUANTITY<mm>]
 
 gcode:
+    {% set quantity = params.QUANTITY|default(20) |int%}
     {% set speed = params.SPEED|default(300) %}
     {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
 
@@ -126,8 +131,8 @@ gcode:
     M300 # beep
 
     G92 E0
-    G1 E25 F{speed} # purge
-    G1 E-420 F{max_velocity} # fast-unload
+    G1 E{quantity*0.2} F{speed} # purge
+    G1 E-{quantity} F{max_velocity} # fast-unload
 
     M300 # beep
 
