--- a/macros/layer_change.cfg
+++ b/macros/layer_change.cfg
@@ -11,7 +11,7 @@ gcode:
     {% set LAYER = params.LAYER|default(0)|int %}
 
     # Log to the screen
-    M117 Layer Layer : FILAMENT
+    LOG MSG="Layer {LAYER} : {HEIGHT}"
 
     # Take a picture if timelapse pluggin is enabled
     TIMELAPSE_TAKE_FRAME
@@ -28,7 +28,9 @@ gcode:
     #Get current layer, total of layers and filament type from Slicer GCode
     {% set CURRENT = params.CURRENT|default(0)|int %}
     {% set TOTAL = params.TOTAL|default(0)|int %}
-    {% set FILAMENT = params.FILAMENT|default(0)|int %}
+    {% set FILAMENT = params.FILAMENT|default("Random filament")|string %}
 
     # Log to the screen
-    M117 Layer ( CURRENT + 1 ) / TOTAL : FILAMENT
+    LOG MSG="Layer {CURRENT + 1} / {TOTAL} : {FILAMENT}"
+
+    SET_PRINT_STATS_INFO CURRENT_LAYER={CURRENT + 1}
