--- a/macros/start_end.cfg
+++ b/macros/start_end.cfg
@@ -10,19 +10,31 @@ description: A startup macro run at the start of each print
   Usage: PRINT_START BED=<temp> EXTRUDER=<temp> TOTAL_LAYER=<total_layer_count>
 gcode:
 
+    # Retreiving the user settings
+    {% set config = printer.configfile.settings %}
+
     #Get Bed and Extruder temperature from Slicer GCode
     {% set BED_TEMP = params.BED|default(60)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER|default(190)|float %}
     {% set TOTAL_LAYER = params.TOTAL_LAYER|default(0)|int %}
 
+    # Make sure the pause is cleared and fresh for each print
+    CLEAR_PAUSE
+
     #Set total layer count
     SET_PRINT_STATS_INFO TOTAL_LAYER={TOTAL_LAYER}
 
     #Preheat nozzle and bed
-    M104 S{EXTRUDER_TEMP * 0.5} # 50% of the final temp to avoid filament leak during bed leveling
+    {% if printer.extruder.temperature < EXTRUDER_TEMP * 0.5 %}
+      M104 S{EXTRUDER_TEMP * 0.5} # 50% of the final temp to avoid filament leak during bed leveling
+    {% elif printer.extruder.temperature > EXTRUDER_TEMP * 0.7 %}
+      M104 S{EXTRUDER_TEMP * 0.7} # 70% of the final temp to avoid filament leak during bed leveling and fast follow up print
+    {% endif %}
     M140 S{BED_TEMP}
 
-    G28 ; Home all axes
+    {% if printer.homed_axes != 'XYZ' %}
+        G28							#Home All Axes
+    {% endif %}
 
     #Load bed mesh
     # BED_MESH_PROFILE LOAD=best_10X10
@@ -30,11 +42,14 @@ gcode:
     SETUP_VORON_PURGE DISPLAY_PARAMETERS=1 ADAPTIVE_ENABLE=1 Z_HEIGHT=0.4 TIP_DISTANCE=10 PURGE_AMOUNT=20 FLOW_RATE=12 X_DEFAULT=10 Y_DEFAULT=10 SIZE=10 DISTANCE_TO_OBJECT_X=10 DISTANCE_TO_OBJECT_Y=10
     SETUP_LINE_PURGE DISPLAY_PARAMETERS=1 ADAPTIVE_ENABLE=1 Z_HEIGHT=0.4 PURGE_AMOUNT=10 LINE_LENGTH=40 FLOW_RATE=12 X_DEFAULT=10 Y_DEFAULT=10 DISTANCE_TO_OBJECT_Y=10
 
+
     M190 S{BED_TEMP}  # Wait for the bed temp to stabilize
     M104 S{EXTRUDER_TEMP * 0.75}
 
     BED_MESH_CLEAR
     BED_MESH_CALIBRATE
+
+    PARK
 
     M109 S{EXTRUDER_TEMP} # Wait for extruder temp to stabilize
 
@@ -51,14 +66,17 @@ gcode:
   M106 S0 # Turn-off fan
   M104 S0 # Turn-off hotend
   M140 S0 # Turn-off bed
+
   # Move nozzle away from print while retracting
   G91
-  # G1 X-2 Y-2 E-3 F300
   G1 X-2 Y-2 F300
+
   # Raise nozzle by 10mm
   G1 Z10 F3000
   G90
+
   # Present the print
-  G1 X146 Y200 F3000
+  G1 X0 Y200 F3000
+
   # Disable steppers
   M84
