--- a/macros/utils.cfg
+++ b/macros/utils.cfg
@@ -42,7 +42,7 @@ gcode:
 
   G90
   G1 X0 Y0 Z50
-  LOG MSG=Nozzle at cleaning position !
+  LOG MSG="Nozzle at cleaning position !"
 
   RESTORE_GCODE_STATE NAME=my_move_up_state
 
