--- a/octoeverywhere-system.cfg
+++ b/octoeverywhere-system.cfg
@@ -3,7 +3,7 @@ type: git_repo
 # Using `channel: beta` makes moonraker only update to the lasted tagged commit on the branch. Which lets us control releases.
 channel: beta
 path: /home/mary/octoeverywhere
-origin: git@github.com:QuinnDamerell/OctoPrint-OctoEverywhere.git
+origin: https://github.com/QuinnDamerell/OctoPrint-OctoEverywhere.git
 env: /home/mary/octoeverywhere-env/bin/python
 requirements: requirements.txt
 install_script: install.sh
