--- a/printer.cfg
+++ b/printer.cfg
@@ -2,7 +2,11 @@
 
 [include mainsail.cfg]
 
-[exclude_object]
+[exclude_object] # Enable object exclusion
+
+
+[gcode_arcs] # Enable arcs support
+resolution: 0.1
 
 [include KAMP/*cfg]
 
@@ -20,7 +24,7 @@ restart_method: command
 [printer]
 kinematics: cartesian
 max_velocity: 500
-max_accel: 2500 # 3500 # 4000 # 5000
+max_accel: 3000 # 3500 # 4000 # 5000
 max_accel_to_decel: 3000 # 4000 # 5000
 square_corner_velocity: 5.0
 max_z_velocity: 5
@@ -118,9 +122,9 @@ max_power: 0.8
 pwm_cycle_time: 0.02 # 1 / 50Hz (frequency of the powerline)
 
 [filament_switch_sensor RunoutSensor]
-pause_on_runout: False
+pause_on_runout: True
 runout_gcode: PAUSE
-insert_gcode: RESUME
+# insert_gcode: RESUME
 switch_pin: !PC15
 
 [heater_bed]
@@ -145,8 +149,8 @@ heater: extruder
 heater_temp: 50.0
 
 [bed_mesh]
-speed: 120
-mesh_min: 7, 7
+speed: 130
+mesh_min: 10, 10
 mesh_max: 220, 185
 algorithm: bicubic
 probe_count: 10, 10
@@ -208,4 +212,21 @@ shaper_type: mzv # ei
 #*# max_y = 184.92
 #*#
 #*# [bltouch]
-#*# z_offset = 3.695
+#*# z_offset = 3.750
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.012500, -0.020000, -0.005000
+#*# 	  -0.020000, -0.017500, -0.010000
+#*# 	  -0.017500, -0.005000, 0.007500
+#*# x_count = 3
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 98.08000000000001
+#*# max_x = 119.52000000000001
+#*# min_y = 92.96000000000001
+#*# max_y = 126.1
